# agentql_blogpost_example

./: .gitignore  README.md  main.py  output.xlsx  pyproject.toml
tests/: test_main.py
