[tool.poetry]
name = "webscraping"
version = "0.1.0"
description = "Web scraping project using AgentQL and Playwright"
authors = ["Brandon Braner <brandon.braner@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
agentql = "*"
playwright = "^1.39.0"
polars = "^1.16.0"
xlsxwriter = "^3.2.0"
pydantic = "^2.10.2"
fastexcel = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
